--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "json": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.1",
+    "firebase": "^10.7.1",
     "json-server": "^0.17.4",
     "next": "14.0.4",
     "react": "^18",
